objects/JunoDoc__Email_Template__c/JunoDoc__Email_Template__c.object-meta.xml
<CustomObject>
    <label>Junodoc Email</label>
    <nameField>
        <label>Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junodoc Email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>