objects/JunoDoc__Email_Template__c/fields/JunoDoc__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Date_Format__c</fullName>
    <label>Date Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>