objects/JunoDoc__Email_Template__c/fields/JunoDoc__Page_Size__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Page_Size__c</fullName>
    <label>Page Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>