objects/JunoDoc__Email_Template__c/fields/JunoDoc__Parent_Fields__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Parent_Fields__c</fullName>
    <label>Master Object Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>