objects/JunoDoc__Email_Template__c/fields/JunoDoc__Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Parent_Object__c</fullName>
    <label>Master Object</label>
    <type>TextArea</type>
</CustomField>