objects/JunoDoc__Email_Template__c/listViews/JunoDoc__All.listView-meta.xml
<ListView>
    <fullName>JunoDoc__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>