objects/JunoDoc__Email_Template__c/listViews/JunoDoc__All1.listView-meta.xml
<ListView>
    <fullName>JunoDoc__All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>JunoDoc__Parent_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>